MDEV-3801 Reproducible sub select join crash on 5.3.8 and 5.3.9

Properly drop all unused keys.
Patch by Igor Babaev.